--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,10 @@ fieldset {
   background-color: #dadada;
 }
 
+.ad-form-header__preview img {
+  object-fit: contain;
+}
+
 .ad-form__field {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -618,6 +622,10 @@ fieldset {
 
   background-color: #e4e4de;
   border-radius: 5px;
+}
+
+.ad-form__photo img {
+  object-fit: contain;
 }
 
 .ad-form__element--submit {
